admin-rke2/namespaces.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: metallb
---
apiVersion: v1
kind: Namespace
metadata:
  name: cert-manager
---
apiVersion: v1
kind: Namespace
metadata:
  name: ingress-nginx
---
apiVersion: v1
kind: Namespace
metadata:
  name: argocd
---
apiVersion: v1
kind: Namespace
metadata:
  name: minio
---
apiVersion: v1
kind: Namespace
metadata:
  name: nfs-provisioner
---
apiVersion: v1
kind: Namespace
metadata:
  name: rook-ceph
---
apiVersion: v1
kind: Namespace
metadata:
  name: local-path-provisioner
---
apiVersion: v1
kind: Namespace
metadata:
  name: sccache
---
apiVersion: v1
kind: Namespace
metadata:
  name: redis
---
apiVersion: v1
kind: Namespace
metadata:
  name: cnpg-system
---
apiVersion: v1
kind: Namespace
metadata:
  name: cnpg
---
apiVersion: v1
kind: Namespace
metadata:
  name: netbox
---
apiVersion: v1
kind: Namespace
metadata:
  name: renovate
---
apiVersion: v1
kind: Namespace
metadata:
  name: opentelemetry
---
apiVersion: v1
kind: Namespace
metadata:
  name: keycloak
